# n-queen

./: .gitignore  pyproject.toml  queen.py
