[project]
name = "n-queen"
version = "0.1.0"
description = "Solves for n in n-queen problem using Genetic Algorithmn"
authors = [
    {name = "pandeyganesha",email = "pandeyganesha@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
